// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Layout/demo/basic.md correctly 1`] = `
<div
  class="layout-basic-demo"
>
  <section
    class="arco-layout"
    style="height:400px"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <main
      class="arco-layout-content"
    >
      Content
    </main>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
  <br />
  <section
    class="arco-layout"
    style="height:400px"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <section
      class="arco-layout"
    >
      <aside
        class="arco-layout-sider arco-layout-sider-light"
        style="width:200px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
      </aside>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
  <br />
  <section
    class="arco-layout"
    style="height:400px"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <section
      class="arco-layout"
    >
      <main
        class="arco-layout-content"
      >
        Content
      </main>
      <aside
        class="arco-layout-sider arco-layout-sider-light"
        style="width:200px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
      </aside>
    </section>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
  <br />
  <section
    class="arco-layout"
    style="height:400px"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <section
      class="arco-layout"
    >
      <aside
        class="arco-layout-sider arco-layout-sider-light"
        style="width:64px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
      </aside>
      <aside
        class="arco-layout-sider arco-layout-sider-light"
        style="width:206px;margin-left:1px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
      </aside>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
</div>
`;

exports[`renders Layout/demo/breakpoint.md correctly 1`] = `
<section
  class="arco-layout layout-collapse-demo"
>
  <aside
    class="arco-layout-sider arco-layout-sider-has-trigger"
    style="width:220px"
  >
    <div
      class="arco-layout-sider-children"
    >
      <div
        class="logo"
      />
      <div
        class="arco-menu arco-menu-dark arco-menu-vertical"
        style="width:100%"
        tabindex="1"
      >
        <div
          class="arco-menu-inner"
        >
          <div
            class="arco-menu-item arco-menu-disabled"
          >
            <svg
              class="arco-icon arco-icon-home"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 17 24 7l17 10v24H7V17Z"
              />
              <path
                d="M20 28h8v13h-8V28Z"
              />
            </svg>
            Menu 1
          </div>
          <div
            class="arco-menu-item arco-menu-selected"
          >
            <svg
              class="arco-icon arco-icon-calendar"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
              />
            </svg>
            Menu 2
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 1
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix is-open"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:auto"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 2
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 3
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 4
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix "
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:0"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-layout-sider-trigger"
      style="width:220px"
    >
      <svg
        class="arco-icon arco-icon-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </div>
  </aside>
  <section
    class="arco-layout"
  >
    <header
      class="arco-layout-header"
    >
      <div
        class="arco-menu arco-menu-light arco-menu-horizontal"
        tabindex="1"
      >
        <div
          class="arco-menu-inner"
        >
          <div
            class="arco-menu-overflow-wrap"
          >
            <div
              class="arco-menu-pop arco-menu-pop-header arco-menu-overflow-sub-menu-mirror"
            >
              <span>
                ···
              </span>
              <span
                class="arco-menu-icon-suffix"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-item arco-menu-disabled"
            >
              <svg
                class="arco-icon arco-icon-home"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
                width="1em"
              >
                <path
                  d="M7 17 24 7l17 10v24H7V17Z"
                />
                <path
                  d="M20 28h8v13h-8V28Z"
                />
              </svg>
              Menu 1
            </div>
            <div
              class="arco-menu-item arco-menu-selected"
            >
              <svg
                class="arco-icon arco-icon-calendar"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
                width="1em"
              >
                <path
                  d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                />
              </svg>
              Menu 2
              <div
                class="arco-menu-selected-label"
              />
            </div>
            <div
              class="arco-menu-pop arco-menu-pop-header"
            >
              <span>
                <svg
                  class="arco-icon arco-icon-calendar"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                  />
                </svg>
                Navigation 1
              </span>
              <span
                class="arco-menu-icon-suffix"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-pop arco-menu-pop-header"
            >
              <span>
                <svg
                  class="arco-icon arco-icon-calendar"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                  />
                </svg>
                Navigation 4
              </span>
              <span
                class="arco-menu-icon-suffix"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      class="arco-layout"
      style="padding:0 24px"
    >
      <div
        class="arco-breadcrumb"
        style="margin:16px 0"
      >
        <div
          class="arco-breadcrumb-item"
        >
          Home
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          List
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          App
        </div>
      </div>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
      <footer
        class="arco-layout-footer"
      >
        Footer
      </footer>
    </section>
  </section>
</section>
`;

exports[`renders Layout/demo/collapsed.md correctly 1`] = `
<section
  class="arco-layout layout-collapse-demo"
>
  <aside
    class="arco-layout-sider arco-layout-sider-light"
    style="width:200px"
  >
    <div
      class="arco-layout-sider-children"
    >
      <div
        class="logo"
      />
      <div
        class="arco-menu arco-menu-light arco-menu-vertical"
        style="width:100%"
        tabindex="1"
      >
        <div
          class="arco-menu-inner"
        >
          <div
            class="arco-menu-item arco-menu-disabled"
          >
            <svg
              class="arco-icon arco-icon-home"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 17 24 7l17 10v24H7V17Z"
              />
              <path
                d="M20 28h8v13h-8V28Z"
              />
            </svg>
            Menu 1
          </div>
          <div
            class="arco-menu-item"
          >
            <svg
              class="arco-icon arco-icon-calendar"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
              />
            </svg>
            Menu 2
          </div>
          <div
            class="arco-menu-item arco-menu-selected"
          >
            <svg
              class="arco-icon arco-icon-calendar"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
              />
            </svg>
            Menu 3
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 1
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix is-open"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:auto"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 2
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 3
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 4
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix "
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:0"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </aside>
  <section
    class="arco-layout"
  >
    <header
      class="arco-layout-header"
    >
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-round trigger"
        type="button"
      >
        <svg
          class="arco-icon arco-icon-caret-left"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M13.171 24.937a1.2 1.2 0 0 1 0-1.874L30.051 9.56c.785-.629 1.949-.07 1.949.937v27.006c0 1.006-1.164 1.566-1.95.937L13.171 24.937Z"
            fill="currentColor"
            stroke="none"
          />
        </svg>
      </button>
    </header>
    <section
      class="arco-layout"
      style="padding:0 24px"
    >
      <div
        class="arco-breadcrumb"
        style="margin:16px 0"
      >
        <div
          class="arco-breadcrumb-item"
        >
          Home
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          List
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          App
        </div>
      </div>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
      <footer
        class="arco-layout-footer"
      >
        Footer
      </footer>
    </section>
  </section>
</section>
`;

exports[`renders Layout/demo/customIcon.md correctly 1`] = `
<section
  class="arco-layout layout-collapse-demo"
>
  <aside
    class="arco-layout-sider arco-layout-sider-light arco-layout-sider-has-trigger"
    style="width:200px"
  >
    <div
      class="arco-layout-sider-children"
    >
      <div
        class="logo"
      />
      <div
        class="arco-menu arco-menu-light arco-menu-vertical"
        style="width:100%"
        tabindex="1"
      >
        <div
          class="arco-menu-inner"
        >
          <div
            class="arco-menu-item arco-menu-disabled"
          >
            <svg
              class="arco-icon arco-icon-home"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 17 24 7l17 10v24H7V17Z"
              />
              <path
                d="M20 28h8v13h-8V28Z"
              />
            </svg>
            Menu 1
          </div>
          <div
            class="arco-menu-item"
          >
            <svg
              class="arco-icon arco-icon-calendar"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
              />
            </svg>
            Menu 2
          </div>
          <div
            class="arco-menu-item arco-menu-selected"
          >
            <svg
              class="arco-icon arco-icon-calendar"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
              />
            </svg>
            Menu 3
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 1
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix is-open"
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:auto"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 2
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="arco-menu-inline"
              >
                <div
                  class="arco-menu-inline-header"
                >
                  <span>
                    <span
                      class="arco-menu-indent"
                    />
                  </span>
                  <span>
                    Navigation 3
                  </span>
                  <span
                    class="arco-menu-icon-suffix "
                  >
                    <svg
                      class="arco-icon arco-icon-down"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="4"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <path
                        d="M39.6 17.443 24.043 33 8.487 17.443"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="arco-menu-inline-content"
                  style="height:0"
                >
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 1
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 2
                    </span>
                  </div>
                  <div
                    class="arco-menu-item arco-menu-item-indented"
                  >
                    <span>
                      <span
                        class="arco-menu-indent"
                      />
                      <span
                        class="arco-menu-indent"
                      />
                    </span>
                    <span
                      class="arco-menu-item-inner"
                      style="display:block"
                    >
                      Menu 3
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-menu-inline"
          >
            <div
              class="arco-menu-inline-header"
            >
              <span>
                <span>
                  <svg
                    class="arco-icon arco-icon-calendar"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                    width="1em"
                  >
                    <path
                      d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                    />
                  </svg>
                  Navigation 4
                </span>
              </span>
              <span
                class="arco-menu-icon-suffix "
              >
                <svg
                  class="arco-icon arco-icon-down"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </span>
            </div>
            <div
              class="arco-menu-inline-content"
              style="height:0"
            >
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 1
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 2
                </span>
              </div>
              <div
                class="arco-menu-item arco-menu-item-indented"
              >
                <span>
                  <span
                    class="arco-menu-indent"
                  />
                </span>
                <span
                  class="arco-menu-item-inner"
                  style="display:block"
                >
                  Menu 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-layout-sider-trigger arco-layout-sider-trigger-light"
      style="width:200px"
    >
      <svg
        class="arco-icon arco-icon-caret-left"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M13.171 24.937a1.2 1.2 0 0 1 0-1.874L30.051 9.56c.785-.629 1.949-.07 1.949.937v27.006c0 1.006-1.164 1.566-1.95.937L13.171 24.937Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
  </aside>
  <section
    class="arco-layout"
  >
    <header
      class="arco-layout-header"
      style="padding-left:20px"
    >
      Header
    </header>
    <section
      class="arco-layout"
      style="padding:0 24px"
    >
      <div
        class="arco-breadcrumb"
        style="margin:16px 0"
      >
        <div
          class="arco-breadcrumb-item"
        >
          Home
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          List
        </div>
        <span
          class="arco-breadcrumb-item-separator"
        >
          <svg
            class="arco-icon arco-icon-oblique-line"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M29.506 6.502 18.493 41.498"
            />
          </svg>
        </span>
        <div
          class="arco-breadcrumb-item"
        >
          App
        </div>
      </div>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
      <footer
        class="arco-layout-footer"
      >
        Footer
      </footer>
    </section>
  </section>
</section>
`;

exports[`renders Layout/demo/resize.md correctly 1`] = `
<div
  class="layout-basic-demo"
>
  <section
    class="arco-layout"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <section
      class="arco-layout"
    >
      <aside
        class="arco-resizebox arco-layout-sider arco-layout-sider-light"
        style="width:200px;min-width:150px;max-width:500px;height:200px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
        <div
          class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
        >
          <div
            class="arco-resizebox-trigger-icon-wrapper"
          >
            <span
              class="arco-resizebox-trigger-icon-empty"
            />
            <span
              class="arco-resizebox-trigger-icon"
            >
              <svg
                class="arco-icon arco-icon-drag-dot-vertical"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
                width="1em"
              >
                <path
                  d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                />
              </svg>
            </span>
            <span
              class="arco-resizebox-trigger-icon-empty"
            />
          </div>
        </div>
      </aside>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
</div>
`;
